--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'org.litepal.android:core:1.6.0'        //配置LitePal
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'  //加入OKHttp库的依赖
+    implementation 'com.google.code.gson:gson:2.7'      //加入JSON依赖库
+    implementation 'com.github.bumptech.glide:glide:4.9.0' //加载和展示图片
+
 }
