--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.3"
     defaultConfig {
         applicationId "com.example.wanghui.coolweather"
-        minSdkVersion 15
+        minSdkVersion 24
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -23,11 +23,13 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'org.litepal.android:core:1.6.0'        //配置LitePal
-    implementation 'com.squareup.okhttp3:okhttp:3.10.0'  //加入OKHttp库的依赖
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'  //加入OKHttp库的依赖
     implementation 'com.google.code.gson:gson:2.7'      //加入JSON依赖库
     implementation 'com.github.bumptech.glide:glide:4.9.0' //加载和展示图片
 
