--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,5 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'  //加入OKHttp库的依赖
     implementation 'com.google.code.gson:gson:2.7'      //加入JSON依赖库
     implementation 'com.github.bumptech.glide:glide:4.9.0' //加载和展示图片
-
+    implementation "androidx.preference:preference:1.1.0"
 }
